--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/KenanSulayman/sinkhole#readme",
   "dependencies": {
-    "pcap": "kenansulayman/node_pcap",
-    "hyperlevel": "^1.0.0"
+    "pcap": "kenansulayman/node_pcap"
+  },
+  "optionalDependencies": {
+    "hyperlevel": "^1.0.0",
+    "level": "*"
   }
 }
